[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/Snail/BasicEnemyRight-Sheet.png" type="Texture" id=1]
[ext_resource path="res://layout_elements/BasicEnemy.gd" type="Script" id=2]
[ext_resource path="res://assets/Snail/BasicEnemyLeft3.png" type="Texture" id=3]
[ext_resource path="res://assets/Snail/BasicEnemyLeft1.png" type="Texture" id=4]
[ext_resource path="res://assets/Snail/BasicEnemyLeft2.png" type="Texture" id=5]
[ext_resource path="res://assets/Snail/BasicEnemyDead.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 49.1375, 27.314 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 39.6786, 8.09807 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 81, 80 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 78, 80 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 78, 80 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 81, 80 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 81, 0, 81, 80 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 162, 0, 81, 80 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 79, 68 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "walkLeft",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "walkRight",
"speed": 6.0
}, {
"frames": [ SubResource( 9 ) ],
"loop": false,
"name": "dead",
"speed": 5.0
} ]

[node name="BasicEnemy" type="KinematicBody2D"]
position = Vector2( 1.13205, -2.64147 )
collision_layer = 4
collision_mask = 9
script = ExtResource( 2 )
speed = Vector2( 100, 800 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.06771, 7.6344 )
shape = SubResource( 1 )

[node name="StompDetector" type="Area2D" parent="."]
position = Vector2( -87.9312, 138.813 )
collision_layer = 4
collision_mask = 8

[node name="StompCollisionShape" type="CollisionShape2D" parent="StompDetector"]
modulate = Color( 0.0745098, 0.0352941, 0.733333, 1 )
position = Vector2( 89.439, -167.243 )
z_index = 1
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.150208, -1.33394 )
scale = Vector2( 1.33833, 1.21064 )
frames = SubResource( 10 )
animation = "walkLeft"

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( 2.76297, 7.62351 )
scale = Vector2( 4.16989, 2.74748 )
process_parent = true
physics_process_parent = true

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="body_entered" from="StompDetector" to="." method="_on_StompDetector_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
